--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "homepage": "https://github.com/zigbang/zigbang-email-verifier",
   "dependencies": {
     "bluebird": "^3.4.6",
-    "lodash": "^4.17.2"
+    "lodash": "^4.17.2",
+    "randomstring": "^1.1.5"
   },
   "devDependencies": {
     "eslint": "^3.12.0",
