--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/zigbang/zigbang-email-verifier",
   "dependencies": {
     "bluebird": "^3.5.5",
+    "chalk": "^3.0.0",
     "debug": "^4.1.1",
     "lodash": "^4.17.15",
     "randomstring": "^1.1.5"
