--- a/package.json
+++ b/package.json
@@ -36,13 +36,13 @@
     "@types/debug": "^4.1.5",
     "@types/jest": "^24.0.23",
     "@types/lodash": "^4.14.149",
+    "@types/node": "^14.0.1",
     "@types/randomstring": "^1.1.6",
     "jest": "^24.9.0",
     "ts-jest": "^24.2.0",
     "typescript": "^3.7.3"
   },
   "scripts": {
-    "prepare": "npm run build",
     "build": "tsc",
     "test": "jest"
   }
