--- a/package.json
+++ b/package.json
@@ -31,16 +31,16 @@
     "wait-queue": "^1.1.2"
   },
   "devDependencies": {
-    "@testdeck/jest": "^0.0.6",
+    "@testdeck/jest": "^0.1.0",
     "@types/bluebird": "^3.5.29",
     "@types/debug": "^4.1.5",
-    "@types/jest": "^24.0.23",
+    "@types/jest": "^25.2.1",
     "@types/lodash": "^4.14.149",
     "@types/node": "^14.0.1",
     "@types/randomstring": "^1.1.6",
-    "jest": "^24.9.0",
-    "ts-jest": "^24.2.0",
-    "typescript": "^3.7.3"
+    "jest": ">=25 <26",
+    "ts-jest": "^25.5.1",
+    "typescript": "^3.9.2"
   },
   "scripts": {
     "build": "tsc",
