--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,7 +2,6 @@ trigger:
   branches:
     include:
       - master
-      - deploy/dev
   paths:
     exclude:
       - README.md
@@ -15,7 +14,7 @@ variables:
   - group: AzureKeyVaults
 
 jobs:
-- job: deploy_prod
+- job: deploy
   pool:
     name: Default
   condition: eq(variables['Build.SourceBranch'], 'refs/heads/master')
@@ -27,28 +26,7 @@ jobs:
       sudo npm install -g gulp gulp-cli
       echo "//registry.npmjs.org/:_authToken=$(NPM-TOKEN)" > ~/.npmrc
       sudo yarn
-      gulp set-new-npm-version-prod 
-      yarn build
-      sudo rm -rf ./node_modules
-      sudo rm -rf ./src
-    displayName: 'Build'
-  - script: |
-      yarn publish-package
-    displayName: 'Deploy'
-
-- job: deploy_dev
-  pool:
-    name: Default
-  condition: eq(variables['Build.SourceBranch'], 'refs/heads/deploy/dev')
-  steps:
-  - checkout: self
-    clean: true
-    persistCredentials: true
-  - script: |
-      sudo npm install -g gulp gulp-cli
-      echo "//registry.npmjs.org/:_authToken=$(NPM-TOKEN)" > ~/.npmrc
-      sudo yarn
-      gulp set-new-npm-version-dev 
+      gulp set-new-npm-version
       yarn build
       sudo rm -rf ./node_modules
       sudo rm -rf ./src
